hard-gists/271862/run.log
=== Docker Run Log for 271862 ===
Started at: Mi 29. Okt 13:12:01 CET 2025

[2025-10-29 13:12:02] START: Running container for 271862
[2025-10-29 13:12:02] SUCCESS: Container 8d5cc607533dcd31c5e73fe07d742824300ae87ac30ba1d952fd8bc389ff352d started for 271862
=== Container logs for 271862 ===
  File "/snippet.py", line 177
    print word,num
    ^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 271862 ===
[2025-10-29 13:12:04] INFO: Container 8d5cc607533dcd31c5e73fe07d742824300ae87ac30ba1d952fd8bc389ff352d has stopped
